Planar region extraction image is working okay. App requires -Xss20m now though.

--- a/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
+++ b/ihmc-high-level-behaviors/src/test/resources/configurations/GDXGPUPlanarRegionExtractionDemo/ImGuiSettings.ini
@@ -107,8 +107,9 @@ Collapsed=0
 DockId=0x00000016,0
 
 [Window][Planar Region Extraction Image]
-Pos=413,746
-Size=309,229
+ViewportPos=4462,233
+ViewportId=0x89C40EA5
+Size=985,754
 Collapsed=0
 
 [Docking][Data]
